--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/maraisr/posthtml-json/issues"
   },
-  "homepage": "https://github.com/maraisr/posthtml-json#readme"
+  "homepage": "https://github.com/maraisr/posthtml-json#readme",
+  "dependencies": {
+    "jsonminify": "^0.4.1"
+  }
 }
